# akshay-srivatsan.github.io

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.toml  CNAME  Makefile  akshay-srivatsan-site.cabal  courses.html  date.js  experience.html  flake.nix  hindi.html  index.html  jobs.html  latin.html  locales.yaml  main.css  projects.html  publications.html  sanskrit.html  sanskrit.js  shows.html  skills.html  srivatsan.bib  tamil.html  tamil.js  transcribe.js  transliterate.js
.github/workflows/: pages.yml
.well-known/: atproto-did  keybase.txt
assets/: links.md  transliterations.yaml
assets/css/: experience.css  fonts.css  index.css  main.css  materialize.css  projects.css  publications.css  skills.css  styles.css
assets/css/.sass-cache/069b2ca5af45bb4f2a68b18c2658adc0835b537c/: _checkboxes.scssc  _file-input.scssc  _forms.scssc  _input-fields.scssc  _radio-buttons.scssc  _range.scssc  _select.scssc  _switches.scssc
assets/css/.sass-cache/41c239a12126758e34d5c68810c4cd5988274cb5/: materialize.scssc
assets/css/.sass-cache/46669ca5c65046e38e3ee08ba9dc514b41e9fc3a/: _badges.scssc  _buttons.scssc  _cards.scssc  _carousel.scssc  _chips.scssc  _collapsible.scssc  _color-classes.scssc  _color-variables.scssc  _datepicker.scssc  _dropdown.scssc  _global.scssc  _grid.scssc  _icons-material-design.scssc  _materialbox.scssc  _modal.scssc  _navbar.scssc  _normalize.scssc  _preloader.scssc  _pulse.scssc  _sidenav.scssc  _slider.scssc  _table_of_contents.scssc  _tabs.scssc  _tapTarget.scssc  _timepicker.scssc  _toast.scssc  _tooltip.scssc  (+4 more)
assets/css/components/: _variables.scss
assets/fonts/: OFL-adinatha.txt  OFL-agastya.txt
assets/js/: common.js  date.js  index.js  latin.js  sanskrit.js  tamil.js  transcribe.js  transliterate.js
content/: courses.md  hindi.md  index.md  jobs.md  latin.md  links.md  sanskrit.md  shows.md  tamil.md
content/pages/: courses.md  jobs.md  shows.md
content/pages/index/: en.md  la.md  sa.md  ta.md
docs/: authoring-notation.md
site/: Main.hs
site/Site/: Config.hs  Content.hs  DateScript.hs  Transliterate.hs  Types.hs
templates/: blog.html  default.html  fonts.css  fonts.html  index.html  listing.html  post-item.html  post.html  redirect.html  selector.html  styles.css  switcher.html
test/: Main.hs
transliterate/: Cargo.toml  hindi.js  hindi.yaml  latin.js  latin.yaml  sa.yaml  sanskrit.js  sanskrit.yaml  ta.yaml  tamil.js  tamil.yaml
transliterate/src/: main.rs
transliteration/: generate_maps.py  sanskrit.js  scripts.py  tamil.js
