cabal-version: 3.0
name:          akshay-srivatsan-site
version:       0.1.0.0
build-type:    Simple

executable site
  main-is:          Main.hs
  other-modules:
    Site.Config
    Site.Content
    Site.DateScript
    Site.Transliterate
    Site.Types

  hs-source-dirs:   site
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat -O2 -threaded
  build-depends:
    , aeson
    , base                >=4.18 && <5
    , bytestring
    , containers
    , filepath
    , hakyll              >=4.16
    , pandoc
    , pandoc-types
    , scientific
    , text
    , time
    , unicode-transforms
    , yaml

test-suite site-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Site.Config
    Site.Content
    Site.Transliterate
    Site.Types

  hs-source-dirs:   test site
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat
  build-depends:
    , aeson
    , base                >=4.18 && <5
    , bytestring
    , containers
    , filepath
    , hakyll              >=4.16
    , pandoc-types
    , scientific
    , text
    , time
    , unicode-transforms
    , yaml
